syntax = "proto3";

package analytics;
option go_package = "github.com/iRankHub/backend/internal/grpc/proto/analytics";

service AnalyticsService {
  rpc GetFinancialReports(FinancialReportRequest) returns (FinancialReportResponse) {}
  rpc GetAttendanceReports(AttendanceReportRequest) returns (AttendanceReportResponse) {}
}

message DateRange {
  string start_date = 1;
  string end_date = 2;
}

message FinancialReportRequest {
  string token = 1;
  DateRange date_range = 2;
  optional string tournament_id = 3;
  optional string report_type = 4;  // "income_overview", "school_performance", "expenses"
  optional string group_by = 5;     // For school_performance: "category", "location"
}

message TournamentIncome {
  string tournament_id = 1;
  string tournament_name = 2;
  string league_id = 3;
  string league_name = 4;
  double total_income = 5;
  double net_revenue = 6;
  double net_profit = 7;
  string tournament_date = 8;
}

message SchoolPerformanceData {
  string group_name = 1;  // Province/Country name or School category
  double total_amount = 2;
  int32 school_count = 3;
}

message ExpenseCategory {
  string tournament_id = 1;
  string tournament_name = 2;
  double food_expense = 3;
  double transport_expense = 4;
  double per_diem_expense = 5;
  double awarding_expense = 6;
  double stationary_expense = 7;
  double other_expenses = 8;
  double total_expense = 9;
}

message FinancialReportResponse {
  repeated TournamentIncome tournament_incomes = 1;
  repeated SchoolPerformanceData school_performance = 2;
  repeated ExpenseCategory expense_categories = 3;
  string report_type = 4;
}

message AttendanceReportRequest {
    string token = 1;
    DateRange date_range = 2;
    optional string tournament_id = 3;
    string report_type = 4;  // "category" or "location"
    repeated string countries = 5;  // For location-based report
}

message CategoryAttendance {
    string category = 1;
    int32 school_count = 2;
    double percentage_change = 3;  // Can be positive or negative
}

message LocationAttendance {
    string location = 1;  // Country or province name
    string location_type = 2;  // "country" or "province"
    int32 school_count = 3;
    double percentage_change = 4;
}

message AttendanceReportResponse {
    string report_type = 1;
    repeated CategoryAttendance category_attendance = 2;
    repeated LocationAttendance location_attendance = 3;
    int32 total_schools = 4;
    double total_percentage_change = 5;
}